# Tsoa with Express/src/routes/v1/routes.ts
@@ -138,6 +138,8 @@ export function RegisterRoutes(app: Router) {
             const args: Record<string, TsoaRoute.ParameterSchema> = {
                     page: {"in":"query","name":"page","dataType":"double"},
                     limit: {"in":"query","name":"limit","dataType":"double"},
+                    ageMin: {"in":"query","name":"ageMin","dataType":"double"},
+                    ageMax: {"in":"query","name":"ageMax","dataType":"double"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
